manifests/01_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubebouncer-server
  namespace: kubebouncer-poc
  labels:
    app: kubebouncer-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubebouncer-server
  template:
    metadata:
      labels:
        app: kubebouncer-server
    spec:
      containers:
      - name: kubebouncer
        imagePullPolicy: Always
        image: kavinrajaganesan/kubebouncer:latest
        ports:
        - containerPort: 8443
          name: kubebouncer-api
        volumeMounts:
        - name: kubebouncer-tls-certs
          mountPath: /etc/kubebouncer/certs
          readOnly: true

      volumes:
      - name: kubebouncer-tls-certs
        secret:
          secretName: kubebouncer-tls-secret
