manifests/02_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubebouncer-server
  namespace: kubebouncer-poc
spec:
  selector:
    app: kubebouncer-server
  ports:
  - port: 443
    targetPort: kubebouncer-api
